compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_inside_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let fahrenheit = {\n    let degrees = 64 + 32\n    degrees\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  let fahrenheit = {
    let degrees = 64 + 32
                       ↑ 
    degrees
  }
}


----- AFTER ACTION
const int = 32

pub fn main() {
  let fahrenheit = {
    let degrees = 64 + int
    degrees
  }
}
