compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_inside_use_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "const number = 123\n\npub fn main() {\n  use x <- result.try(todo)\n  Ok(number)\n}"
---
----- BEFORE ACTION
const number = 123

pub fn main() {
  use x <- result.try(todo)
  Ok(number)
  ↑         
}


----- AFTER ACTION
const number = 123

const result = Ok(number)

pub fn main() {
  use x <- result.try(todo)
  result
}
