compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_literal_within_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  let c = #(0.333334, todo)\n}"
---
----- BEFORE ACTION
pub fn main() {
  let c = #(0.333334, todo)
            ▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION
const float = 0.333334

pub fn main() {
  let c = #(float, todo)
}
