compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_return_of_int.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  100\n}"
---
----- BEFORE ACTION
pub fn main() {
  100
  ▔▔↑
}


----- AFTER ACTION
const int = 100

pub fn main() {
  int
}
