compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_string_in_return.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  \"constant\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "constant"
  ↑         
}


----- AFTER ACTION
const string = "constant"

pub fn main() {
  string
}
